--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="container">
         <header>Lifestyle <i class="fa fa-angle-right"></i></header>
         <main id="main" class="main">
-        
+        <!-- content goes here -->
         </main> 
         <aside id="aside">
         
